--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ComapnyApp",
+  "name": "companyapp",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^6.1.0",
     "nodemon": "^1.19.1"
   }
 }
