--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "mongoose": "7.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
