--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --watch \"./{,!(node_modules)/**/}*.test.js\""
+    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\"",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
   },
   "dependencies": {
     "chai": "4.2.0",
@@ -13,7 +14,8 @@
     "express": "^4.17.1",
     "mocha": "6.2.1",
     "mongodb": "^6.1.0",
-    "mongoose": "7.4.3"
+    "mongoose": "7.4.3",
+    "onchange": "6.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
